--- a/raintis/pom.xml
+++ b/raintis/pom.xml
@@ -70,5 +70,10 @@
             <artifactId>guava</artifactId>
             <version>21.0</version>
          </dependency>
+         <dependency>
+            <groupId>com.googlecode.jslint4java</groupId>
+            <artifactId>jslint4java</artifactId>
+            <version>2.0.5</version>
+         </dependency>
 	</dependencies>
 </project>
