--- a/test/.classpath
+++ b/test/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="E:/d/dev/workspace/test/jar/commons-lang3-3.4.jar"/>
 	<classpathentry kind="lib" path="F:/trdjar/fastjson-1.1.15.jar"/>
+	<classpathentry kind="con" path="org.jetbrains.kotlin.core.KOTLIN_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
