--- a/test/.classpath
+++ b/test/.classpath
@@ -6,7 +6,7 @@
 			<accessrule kind="accessible" pattern="**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/d/dev/workspace/test/jar/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="E:/d/dev/workspace/test/jar/commons-lang3-3.4.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/.org.sf.feeling.decompiler1543480644183/source/commons-lang3-3.4-sources-1543480644831.jar"/>
 	<classpathentry kind="lib" path="F:/trdjar/fastjson-1.1.15.jar"/>
 	<classpathentry kind="con" path="org.jetbrains.kotlin.core.KOTLIN_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
